# nodal-dg

Codes1.1/CFD1D/: Euler1D.m  EulerDriver1D.m
Codes1.1/Codes1D/: Advec1D.m  AdvecDriver1D.m  GradVandermonde1D.m
nudg++/trunk/: Makefile
nudg++/trunk/Include/: Advec1D.h  CS_Type.h  Global_funcs.h  Globals1D.h  Mat_COL.h  NDG1D.h
nudg++/trunk/Src/: CMakeLists.txt
nudg++/trunk/Src/Codes1D/: BuildMaps1D.cpp  Connect1D.cpp  GeometricFactors1D.cpp  Globals1D.cpp  GradJacobiP.cpp  GradVandermonde1D.cpp  Lift1D.cpp  NDG1D.cpp  Normals1D.cpp  StartUp1D.cpp
nudg++/trunk/Src/Examples1D/: Advec1D.cpp  Advec1D_Driver.cpp  Advec1D_Fluxes.cpp  Advec1D_RHS.cpp  Advec1D_Run.cpp  Advec1D_main.cpp
nudg++/trunk/VC8/: NDG.sln
